--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -19,17 +19,7 @@
 
  
 #image {
-position: relative;
-height: 45vh;
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: center;
-text-align: center;
-background-size: content;
-background-position: center  center;
-background-repeat: no-repeat;
-color: white;
+ width: 100%;
 }
 
 .college-image {
